fix files reload icon spacing

--- a/web/kiri/index.css
+++ b/web/kiri/index.css
@@ -1910,10 +1910,12 @@ button:hover {
 .t-33 {
     width: 33%;
 }
+.flex {
+    display: flex;
+}
 .fat5 {
     display: inline-block;
     min-width: 5px !important;
-    width: 5px !important;
 }
 .t-group {
     background-image: var(--gradbar);
